Fix horizontal scroll bar caused by translated section on the options page.

--- a/src/options.css
+++ b/src/options.css
@@ -3,6 +3,9 @@ html {
     font-family: arial, sans-serif;
     padding: 0;
     margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     -webkit-font-smoothing: antialiased;
     font-smoothing: antialiased;
     color: #333;
